--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'index.html' %} {% block content %}
 
 <form method="post" class="buttons">
 	<h3>Enter The Chat Room</h3>
